5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1724_2522.log
== TEST (2019-05-14 12:24:37) 
-- CODE:
n=int(input())
total=1
i=1

while(i<n ):
	calc=(1+i/(i+2)
	total=calc*total
	i=i+1
final=2*(total)
print(round(final,10))
-- ERROR:
File "XXXX", line 7
    total=calc*total
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:25:39) 
-- CODE:
n=int(input())
total=1
i=1

while(i<n ):
	calc=1+(i/(i+2))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
186.1818181818
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:26:18) 
-- CODE:
n=int(input())
total=1
i=1

while(i<n ):
	calc=(1+(i/(i+2)))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
186.1818181818
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:26:32) 
-- CODE:
n=int(input())
total=1
i=1

while(i<n ):
	calc=(1+(i/(i+2)))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
186.1818181818
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:26:44) 
-- CODE:
n=int(input())
total=1
i=1

while(i<n ):
	calc=(1+(i/(i+2)))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
186.1818181818
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:27:03) 
-- CODE:
n=int(input())
total=1
i=1

while(i<=n ):
	calc=(1+(i/(i+2)))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
341.3333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:27:54) 
-- CODE:
n=int(input())
total=1
i=1

while(i<=n ):
	calc=(1+(i/(i+2)))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
341.3333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:28:43) 
-- CODE:
n=int(input())
total=1
i=1

while(i<=n ):
	calc=(1+(i/(i+2)))
	total=(calc*total)
	i=i+1
final=2*(total)
print(round(final,10))
-- OUTPUT:
341.3333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
